k8s/dev/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: database-dev
