k8s/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-dev
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 8080
  selector:
    app: backend
