k8s/dev/mysql-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
  namespace: database-dev
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
