k8s/dev/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: database-dev
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
